--- a/tabist/styles/tabs.css
+++ b/tabist/styles/tabs.css
@@ -1,3 +1,4 @@
+/* #content { */
 body {
     margin: 0 auto;
     max-width: 50em;
@@ -14,6 +15,16 @@ h2 {
   color: #333;
 }
 
-a {
-	color: #444;
+#controls {
+  /* margin-bottom: 1.5em; */
 }
+
+.controls-selections {
+  /* margin-bottom: 1.5em; */
+}
+
+.container div ul li a {
+	color: #444 !important;
+}
+
+
